Add labels to Opened PR based on rule matching. Validate existence of directories and files in rules.